Integrated IE addon's new action

--- a/Localisation/PanelShortcuts.csv
+++ b/Localisation/PanelShortcuts.csv
@@ -49,3 +49,4 @@
 2111542035||preset_value_Taunt|[SCAAR] Taunt
 2111542036||preset_value_ToggleIEAutoWalk|[IE] Toggle Auto Walk
 2111542037||preset_value_ToggleActionLog|[Action Log] Toggle Action Log
+2111542038||preset_value_ToggleIEFollowRoad|[IE] Toggle Follow Road
